<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="enable_login"
        android:title="@string/enable_login"
        android:summary="@string/enable_login_description"
        android:defaultValue="true" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="language"
        android:title="@string/choose_lang"
        android:defaultValue="default"
        android:entries="@array/pref_languages_list_titles"
        android:entryValues="@array/pref_languages_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
